@@ -74,6 +74,7 @@ following names for their contribution to the product.
 * Olaf Lenz
 * Paul Copperman
 * RememberTheDot
+* René Kijewski
 * ST47
 
 == Translators ==
